--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   flutter_signin_button: ^2.0.0
   google_sign_in: ^5.3.0
   firebase_auth: ^3.3.15
+  cloud_firestore: ^3.1.15
+  provider: ^6.0.2
 
 dev_dependencies:
   flutter_test:
