--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   firebase_auth: ^3.3.15
   cloud_firestore: ^3.1.15
   provider: ^6.0.2
+  fluttertoast: ^8.0.9
 
 dev_dependencies:
   flutter_test:
