--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   cloud_firestore: ^3.1.15
   provider: ^6.0.2
   fluttertoast: ^8.0.9
+  location: 
+  google_maps_flutter: 
 
 dev_dependencies:
   flutter_test:
